white space fix

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -313,6 +313,7 @@ h5 {
 }*/
 .container {
   display: flex;
+  height: 100%;
   min-height: 580px;
   padding: 0;
   margin: 0;
