--- a/LESS/main.less
+++ b/LESS/main.less
@@ -70,7 +70,7 @@ h1, h2, h3, h4, h5 {
 
 .container {
     display: flex;
-    // height: 100%;
+    height: 100%;
     min-height: 580px;
     padding: 0;
     margin: 0;
@@ -197,4 +197,3 @@ h1, h2, h3, h4, h5 {
 };
 // .activTabMainNav {
 //     height: 20px;  
-//
